--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-Deep_Learning_practice/Week4/cats_and_dogs_filtered/
-Deep_Learning_practice/Week4/cats_and_dogs_filtered.zip
-Deep_Learning_practice/Week6/aclImdb/
-Deep_Learning_practice/Week6/aclImdb_v1.tar.gz
-Deep_Learning_practice/Week5/.ipynb_checkpoints/
+.ipynb_checkpoints/
